2007-10-08: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signer.pm: use "Key" property instead of "private" to
   store the private key; new methods key() and key_file(); allow each
   signature to have its own private key

2007-10-04: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/MessageParser.pm: return nonzero for PRINT and CLOSE
 * lib/Mail/DKIM/DkSignature.pm: make expiration() for DomainKey-Signature
   behave more compatibly with expiration() for DKIM-Signature
 * lib/Mail/DKIM/Verifier.pm: remove dependency on Error module
 * README: what I'm interested in if make test fails
 * lib/Mail/DKIM/Signer.pm: fix bug reported by dairiki, who noticed that
   the Signer class ignored the signature-specified algorithm when
   building the algorithm object
 * scripts/dkimsign.pl: update POD a bit
 * scripts/dkimverify.pl: add POD
 * lib/Mail/DKIM/Canonicalization/Base.pm, Algorithm/Base.pm:
   add see also, author, copyright sections to POD
 * lib/Mail/DKIM/Algorithm/rsa_sha1.pm, rsa_sha256.pm: remove useless pod
 * ...and others...: inline documentation (POD) cleanup

2007-10-03: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Canonicalization/DkCommon.pm: attempt at making the
   header handling algorithm easier to understand
 * t/signer.t: test case for unreadable private key
 * lib/Mail/DKIM/PrivateKey.pm: die if unable to open private key file
 * lib/Mail/DKIM/Signer.pm: no more need for a separate existance check
   on the private key filename
 * lib/Mail/DKIM/Signature.pm: allow Identity to be specified in new()
 * lib/Mail/DKIM/Signer.pm: allow Identity to be specified in new()
 * t/signer.t: test that specifying Identity works

2007-10-02: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Canonicalization/DkCommon.pm: there are some varying
   opinions about how to verify DomainKey-signed messages when there is
   an h= tag and the headers are in a different order... this is an
   attempt at making our verifier more compatible with other
   implementations