@@ -2,6 +2,7 @@
  * lib/Mail/DKIM/Signer.pm: use "Key" property instead of "private" to
    store the private key; new methods key() and key_file(); allow each
    signature to have its own private key
+ * t/signer_policy.t: test specifying a key file in a policy
 
 2007-10-04: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/MessageParser.pm: return nonzero for PRINT and CLOSE
